--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li>Responsive Web Design</li>
         <li>Adobe Photoshop</li>
         <li>Cybersecurity</li>
-        <li></li>
+        
       </ul>
     </section>
 
@@ -78,14 +78,7 @@
         </div>
 
         <!-- Project 3 -->
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Project 3</h5>
-              <p class="card-text">Something else you’ve built or designed.</p>
-            </div>
-          </div>
-        </div>
+        
 
         <!-- To add more projects, duplicate the block above and update content -->
       </div>
@@ -95,7 +88,7 @@
     <section id="resume" class="container py-5">
       <h2>My Resume</h2>
       <p>You can download my resume here:</p>
-      <a href="doc/Muhd Adib Tarmizi Resume-V2.pdf.pdf" class="btn btn-primary" download>Download Resume</a>
+      <a href="doc/Muhd Adib Tarmizi Resume-V2.pdf" class="btn btn-primary" download>Download Resume</a>
     </section>
 
     <!-- Contact Section -->
