--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">Mens' Clothing E-commerence Website</h5>
-              <p class="card-text">Created a e-commerence website using html and css </p>
+              <h5 class="card-title">Anime Mart</h5>
+                  <h5 class="card-img"> </h5>
+              <p class="card-text">Created an anime merch website using wordpress which sells anime merch as a school project </p>
             </div>
           </div>
         </div>
@@ -78,7 +79,15 @@
         </div>
 
         <!-- Project 3 -->
-        
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Medication Information System / Database </h5>
+              <p class="card-text">Built a prototype reactive web app of a medication information system in a coding competition using outsystems desgined to help patients to support their treatment process
+              </p>
+            </div>
+          </div>
+        </div>
 
         <!-- To add more projects, duplicate the block above and update content -->
       </div>
@@ -100,7 +109,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-light text-center py-3">&copy; 2025 Your Name</footer>
+  <footer class="bg-light text-center py-3">&copy; 2025 Adib </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
